--- a/TweenAnimation/.swiftlint.yml
+++ b/TweenAnimation/.swiftlint.yml
@@ -46,6 +46,12 @@ function_body_length:
 function_parameter_count:
   warning: 5
   error: 9999
+identifier_name:
+  excluded:
+    - to
+  #min_length:
+  #  warning: 0
+  #  error: 0
 line_length: 200
 number_separator:
   minimum_length: 5
